# who-owns-who

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DESIGN.md  LICENSE  QUICKSTART.md  README.md  README_FLASK.md  app.py  pyproject.toml
.github/workflows/: ci.yml
examples/: activities.csv  people.csv
static/css/: style.css
static/js/: app.js
templates/: index.html
tests/: __init__.py  test_compute.py  test_integration.py  test_models.py  test_strategies.py  test_utils.py
tripsettle/: __init__.py  compute.py  errors.py  io.py  models.py  strategies.py  utils.py
